--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,12 +16,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright
-      run: npx playwright install --with-deps
+      run: npx playwright install --with-deps chromium webkit
     - name: Run tests
-      run: npx playwright test
+      run: npx playwright test --project=chromium --project=webkit
     - name: Generate HTML report
       if: always()
-      run: npx playwright show-report
+      timeout-minutes: 5
+      run: |
+        npx playwright show-report || (echo "Report generation timed out, retrying..." && npx playwright show-report)
     - uses: actions/upload-artifact@v4
       if: always()
       with:
