--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "playwright": "^1.55.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.1",
     "allure-playwright": "^3.4.1"
