--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.3.1",
-    "allure-playwright": "^3.4.1"
+    "allure-playwright": "^3.4.1",
+    "dotenv": "^17.2.3"
   }
 }
