--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -74,11 +74,11 @@ jobs:
       with:
         server_address: smtp.gmail.com
         server_port: 587
-        username: ${{ secrets.EMAIL_USERNAME }}
-        password: ${{ secrets.EMAIL_PASSWORD }}
+        username: ${{ secrets.GMAIL_USERNAME }}
+        password: ${{ secrets.GMAIL_APP_PASSWORD }}
         subject: 'Playwright Test Results - ${{ github.repository }}'
         to: "jaffercharliebe@gmail.com"
-        from: ${{ secrets.EMAIL_SENDER }}
+        from: ${{ secrets.GMAIL_USERNAME }}
         body: |
           Test execution completed for commit: ${{ github.sha }}
           
