--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -76,7 +76,7 @@ jobs:
         server_port: 587
         username: ${{ secrets.GMAIL_USERNAME }}
         password: ${{ secrets.GMAIL_APP_PASSWORD }}
-        subject: 'Playwright Test Results - ${{ github.repository }}'
+        subject: 'Playwright Test Results - ${{ github.repository }} - ${{ format(github.event.head_commit.timestamp || github.event.schedule, 'YYYY-MM-DD')        
         to: "jaffercharliebe@gmail.com"
         from: ${{ secrets.GMAIL_USERNAME }}
         body: |
