--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -3,7 +3,6 @@ name: Playwright Tests
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   test:
@@ -26,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright browsers
-      run: npx playwright install --with-deps chromium webkit
+      run: npx playwright install --with-deps chromium
     - name: Run tests
       run: npm run test
       continue-on-error: true
@@ -60,8 +59,8 @@ jobs:
         echo "/opt/allure/bin" >> $GITHUB_PATH
     - name: Generate Allure Report
       run: allure generate allure-results -o allure-report --clean
-    - name: Create report zip
-      run: zip -r allure-report.zip allure-report/
+    - name: Create report archive
+      run: tar -czf allure-report.tar.gz allure-report/
     - name: Upload Allure Report
       uses: actions/upload-artifact@v4
       with:
@@ -86,4 +85,4 @@ jobs:
           Branch: ${{ github.ref_name }}
           
           View full results: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        attachments: allure-report.zip
+        attachments: allure-report.tar.gz
