--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,13 @@ coverage/
 # Temporary
 *.tmp
 *.temp
+
+# Build artifacts
+build/
+dist/
+
+# Test artifacts
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
